tdf#140986 hang in validity message

this doesn't fix the root of the problem (something generating an
insanely long validation message).
It just prevents that problem from locking up the UI.

Change-Id: I334729a30eca4a11d0150e3c89ff11c92a862061
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/112461
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>